--- a/ui/layout.templ
+++ b/ui/layout.templ
@@ -8,8 +8,8 @@ templ layout() {
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<title>Offers Market</title>
 			<link rel="stylesheet" href="/static/styles.css"/>
+			<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon"/>
 		</head>
-
 		<body>
 			{ children... }
 		</body>
