--- a/ui/layout.templ
+++ b/ui/layout.templ
@@ -7,8 +7,9 @@ templ layout() {
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<title>Offers Market</title>
-			<link rel="stylesheet" href="/static/styles.css"/>
+			// <link rel="stylesheet" href="/static/styles.css"/>
 			<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon"/>
+			<script src="https://cdn.tailwindcss.com"></script>
 		</head>
 		<body>
 			{ children... }
